# composable_player

./: .dockerignore  .gitignore  .mcp.json  API.md  CLAUDE.md  CMakeLists.txt  package.xml
config/: default_params.yaml
include/composable_player/: player_node.hpp  recorder_node.hpp
launch/: composable.launch.py  player.launch.py  recorder.launch.py
src/: player_node.cpp  recorder_node.cpp
